--- a/index.html
+++ b/index.html
@@ -2,25 +2,35 @@
 <html>
 
 <head>
-    <title>Ping Pong</title>
+  <title>Ping Pong</title>
 </head>
 
 <body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>ping-pong</h1>
+      <a href="weather.html">Click for the weather...</a>
+    </div>
+    <h3>Check out the TIME!!</h3>
+    <h3 id="time"></h3>
+
     <form id="ping-pong-form">
-        <label for="goal">Enter a number:</label>
-        <input id="goal" type="number">
-        <button type="submit">Submit</button>
+      <label for="goal">Enter a number:</label>
+      <input id="goal" type="number">
+      <button type="submit">Submit</button>
     </form>
     <form id="signup">
-        <label for="email">Enter your email:</label>
-        <input type="email" id="email">
-        <button type="submit">Submit</button>
+      <label for="email">Enter your email:</label>
+      <input type="email" id="email">
+      <button type="submit">Submit</button>
     </form>
     <ul id="solution">
 
     </ul>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="build/js/app.js"></script>
+  </div>
+  <link rel="stylesheet" href="build/css/vendor.css">
+  <script src="build/js/vendor.min.js"></script>
+  <script type="text/javascript" src="build/js/app.js"></script>
 </body>
 
 </html>
