--- a/weather.html
+++ b/weather.html
@@ -1,21 +1,31 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
-  <link rel="stylesheet" href="build/css/vendor.css">
-  <script src="build/js/vendor.min.js"></script>
-  <script type="text/javascript" src="build/js/app.js"></script>
-  <title>Weather</title>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <link rel="stylesheet" href="build/css/styles.css">
+    <title>Weather</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Get Weather Conditions From Anywhere!</h1>
-      <a href="index.html">Back to Awesome land</a>
+    <div class="container">
+
+        <div class="jumbotron">
+            <h1>Get Weather Conditions From Anywhere!</h1>
+            <a href="index.html">Back to Awesome land</a>
+        </div>
+
+        <div class="box">
+            <label for="location">Enter a location:</label>
+            <input id="location" type="text">
+            <button class="button" id="weatherLocation">Get Current Humidity!</button>
+
+            <!-- Display current humidity of location -->
+            <div class="showWeather"></div>
+        </div>
     </div>
-    <label for="location">Enter a location:</label>
-    <input id="location" type="text">
-    <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-    <div class="showWeather"></div>
-  </div>
+
+    <script src="build/js/vendor.min.js"></script>
+    <script type="text/javascript" src="build/js/app.js"></script>
 </body>
